[project]
name = "Graphinate"
version = "0.2.13"
authors = [
    { name = "Eran Rivlis", email = "eran@rivlis.info" },
]
description = "Graphinate. Data to Graphs."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed"
]
keywords = ['graph', 'declarative']
dependencies = [
    "click==8.1.7",
    "inflect==7.0.0",
    "loguru==0.7.2",
    "matplotlib==3.8.3",
    "networkx==3.2.1",
    "strawberry-graphql[asgi,opentelemetry]==0.219.2"
]


[project.urls]
"Homepage" = "https://erivlis.github.io/graphinate"
"Documentation" = "https://erivlis.github.io/graphinate"
"Bug Tracker" = "https://github.com/erivlis/graphinate/issues"
"Source" = "https://github.com/erivlis/graphinate"


[project.optional-dependencies]
dev = [
    "ruff",
    "pipdeptree"
]
docs = [
    "mkdocs-material",
    "mkdocstrings-python",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-gen-files",
    "mkdocs-glightbox",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
]
test = [
    "faker>=23.2.1",
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.4",
    "pytest-cov>=4.1.0",
    "pytest-randomly>=3.15.0",
    "pytest-xdist>=3.5.0"
]
plot = [
    "scipy>=1.12.0"
]
server = [
    "starlette-prometheus",
    "uvicorn[standard]>=0.27.0"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.metadata]
allow-direct-references = true


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]


[tool.coverage.report]
exclude_also = [
    "...",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]


[tool.black]
line-length = 120
#extend-exclude = ''

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "C90",
    "I",
    "N",
    "U",
    "C4",
    "PIE",
    "PT",
    "SIM",
    # "ERA",
    "TRY",
    "RUF",
]
ignore = ["F401", "TRY003"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".idea",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "venv",
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "single"


[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 15
