[project]
name = "Graphinate"
version = "0.12.0"
description = "Graphinate. Data to Graphs."
authors = [
    { name = "Eran Rivlis", email = "eran@rivlis.info" },
]
readme = "README.md"
requires-python = ">=3.10, <3.14"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed"
]
keywords = ['graph', 'declarative']
dependencies = [
    "click",
    "inflect",
    "loguru",
    "mappingtools",
    "matplotlib",
    "networkx",
    "networkx-mermaid",
    "networkx-query",
    "numpy",
    "strawberry-graphql[asgi,opentelemetry]",
]

[project.optional-dependencies]
plot = [
    "scipy"
]
server = [
    "starlette-prometheus",
    "uvicorn[standard]"
]

[project.urls]
"Homepage" = "https://erivlis.github.io/graphinate"
"Documentation" = "https://erivlis.github.io/graphinate"
"Bug Tracker" = "https://github.com/erivlis/graphinate/issues"
"Source" = "https://github.com/erivlis/graphinate"


[project.scripts]
graphinate = "graphinate.cli:cli"


[dependency-groups]
dev = [
    "commitizen>=4.10.0",
    "mypy",
    "ruff",
    "uv",
]
mdformat = [
    "mdformat",
    "mdformat-admon",
    "mdformat-config",
    "mdformat-footnote",
    "mdformat-frontmatter",
    "mdformat-gfm",
    "mdformat-gfm-alerts",
    "mdformat-ruff",
    "mdformat-tables"
]
docs = [
    "mkdocs-material>=9.6.22",
    "mkdocstrings-python",
    "mkdocs-git-committers-plugin-2",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-gen-files",
    "mkdocs-glightbox",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
    "mike"
]
test = [
    "faker",
    "httpx",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pytest-randomly",
    "pytest-xdist"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default]
installer = "uv"

#[tool.hatch.build.targets.wheel]
#packages = ["src/graphinate"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_also = [
    "...",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[tool.coverage.run]
branch = true

[tool.black]
line-length = 120
#extend-exclude = ''

[tool.ruff]
line-length = 120


[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "C90",
    "I",
    "N",
    "U",
    "C4",
    "PIE",
    "PT",
    "SIM",
    # "ERA",
    "TRY",
    "RUF",
]
ignore = ["TRY003", "UP007", "RUF100"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".idea",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "venv",
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "single"


[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 15

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
